fix: YakitCollapse noActiveBg类名选择范围、修改web Fuzzer 侧边侧边项目卡-规则新增noActiveBg属性

--- a/app/renderer/src/main/src/components/yakitUI/YakitCollapse/YakitCollapse.module.scss
+++ b/app/renderer/src/main/src/components/yakitUI/YakitCollapse/YakitCollapse.module.scss
@@ -61,7 +61,7 @@
 }
 
 .yakit-collapse-no-active-bg {
-    & > :global(.ant-collapse-item) {
+     :global(.ant-collapse-item) {
         &:global(.ant-collapse-item-active) {
             background: transparent;
         }
